--- a/index.html
+++ b/index.html
@@ -56,7 +56,6 @@
                 <div class="technologies">
                     <span>Vue.js</span><span>JavaScript</span><span>HTML5</span><span>CSS3</span><span>Responsive Design</span><span>Firebase (planned)</span>
                 </div>
-                <a href="https://deakin.au.panopto.com/Panopto/Pages/Viewer.aspx?id=a31eac70-305c-49a5-8571-b20000b21f22" class="button project-link" target="_blank">View Video Demo</a>
             </div>
 
             <!-- CAPSTONE PROJECT -->
@@ -71,7 +70,6 @@
                 <div class="technologies">
                     <span>Python</span><span>Bash</span><span>Nmap</span><span>Metasploit</span><span>Git</span><span>Trello</span>
                 </div>
-                <a href="https://github.com/Jec360" class="button project-link" target="_blank">View on GitHub</a>
             </div>
 
             <!-- DEVOPS PROJECT -->
@@ -86,7 +84,6 @@
                 <div class="technologies">
                     <span>Jenkins</span><span>Docker</span><span>SonarQube</span><span>React.js</span><span>Node.js</span><span>GitHub Actions</span>
                 </div>
-                <a href="https://github.com/Jec360" class="button project-link" target="_blank">View on GitHub</a>
             </div>
         </section>
 
@@ -120,7 +117,7 @@
         <div class="social-links">
             <a href="mailto:jestinejojo17@gmail.com" aria-label="Email"><i class="fas fa-envelope"></i></a>
             <a href="https://linkedin.com/in/jestine-jojo-94a620259" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
-            <a href="https://github.com/Jec360" target="_blank" aria-label="GitHub"><i class="fab fa-github"></i></a>
+            <a href="https://github.com/Jes360" target="_blank" aria-label="GitHub"><i class="fab fa-github"></i></a>
         </div>
     </footer>
 
