--- a/index.html
+++ b/index.html
@@ -41,6 +41,35 @@
 
         <section id="projects">
             <h2>Featured Projects</h2>
+                    <!-- AUTO AUDIT COMPLIANCE TOOL -->
+        <div class="project-card">
+            <h3>Auto Audit Compliance Tool</h3>
+            <p class="project-role">Backend Developer (Jan 2025 – Feb 2025)</p>
+            <p>An automated compliance-checking tool built with <strong>Python</strong> and <strong>FastAPI</strong>, using Redis caching and Celery for task orchestration to improve audit performance and scalability.</p>
+            <ul>
+                <li>Built async cache helpers (`get()`, `set()`, `delete()`, `clear()`, `stats()`) with JSON (de)serialization, connection pooling, retry/backoff, and comprehensive error handling.</li>
+                <li>Implemented secured admin endpoints (`GET /api/v1/cache/status`, `POST /api/v1/cache/clear`, `GET /api/v1/cache/stats`) for health, management and real-time hit/miss monitoring.</li>
+                <li>Created high-level architecture and documentation for the Controls/Metadata Proxy and caching card, and validated via a local stack (FastAPI + Redis + Celery + Prometheus) using a Dev Proxy for safe testing without credentials.</li>
+            </ul>
+            <div class="technologies">
+                <span>Python</span><span>FastAPI</span><span>Redis</span><span>Celery</span><span>Docker (local)</span><span>Prometheus</span>
+         </div>
+            <p class="project-award"><strong>Award:</strong> Best Project of the Year — Deakin University, 2025</p>
+        </div>
+        
+            <!-- CAPSTONE PROJECT -->
+            <div class="project-card">
+                <h3>Capstone: AppAttack Security-Automation Toolkit</h3>
+                <p class="project-role">Security Automation Developer (Mar 2025 - May 2025)</p>
+                <p>An automated security testing toolkit designed to streamline reconnaissance, vulnerability scanning, and exploitation.</p>
+                <ul>
+                    <li>Engineered Python parsers for Nmap, John the Ripper, and Metasploit, converting raw output to structured JSON for analysis.</li>
+                    <li>Designed a Bash workflow (Recon, Scans, Exploitation) that streamlined the entire security testing process.</li>
+                </ul>
+                <div class="technologies">
+                    <span>Python</span><span>Bash</span><span>Nmap</span><span>Metasploit</span><span>Git</span><span>Trello</span>
+                </div>
+            </div>
             
             <!-- VUE.JS PROJECT -->
             <div class="project-card">
@@ -58,19 +87,6 @@
                 </div>
             </div>
 
-            <!-- CAPSTONE PROJECT -->
-            <div class="project-card">
-                <h3>Capstone: AppAttack Security-Automation Toolkit</h3>
-                <p class="project-role">Security Automation Developer (Mar 2025 - May 2025)</p>
-                <p>An automated security testing toolkit designed to streamline reconnaissance, vulnerability scanning, and exploitation.</p>
-                <ul>
-                    <li>Engineered Python parsers for Nmap, John the Ripper, and Metasploit, converting raw output to structured JSON for analysis.</li>
-                    <li>Designed a Bash workflow (Recon, Scans, Exploitation) that streamlined the entire security testing process.</li>
-                </ul>
-                <div class="technologies">
-                    <span>Python</span><span>Bash</span><span>Nmap</span><span>Metasploit</span><span>Git</span><span>Trello</span>
-                </div>
-            </div>
 
             <!-- DEVOPS PROJECT -->
             <div class="project-card">
